[package]
name = "folder-acl-viewer"
author = "Paweł Harasymowicz <contact@gmshage.com>"
version = "0.1.7"
edition = "2024"

[dependencies]
csv = "1.4.0"
eframe = { version = "0.35", features = ["glow"] }
egui = "0.35.0"
egui_extras = "0.35.0"
rfd = "0.17.2"
tokio = { version="1.52.4",features = ["rt-multi-thread", "fs", "macros"] }
